--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "airbnb",
   "rules": {
-    "linebreak-style": "off"
+    "linebreak-style": 0,
+    "import/no-unresolved": 1,
+    "no-undef": 1
   }
 }
