--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "import/extensions": 1,
     "no-undef": 1,
     "no-multiple-empty-lines": 1,
-    "no-empty": 1
+    "no-empty": 1,
+    "no-debugger": 1
   }
 }
