--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pluralsight course about how to use webpack",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --open",
     "lint": "eslint"
   },
   "keywords": ["webpack"],
