--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "webpackfunamentals",
   "version": "1.0.0",
   "description": "Pluralsight course about how to use webpack",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TedTrela/webpackfundamentals.git"
+  },
   "main": "app.js",
   "scripts": {
     "start": "webpack-dev-server --open",
@@ -14,6 +18,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.9.0",
@@ -22,6 +27,7 @@
     "eslint-plugin-react": "^7.4.0",
     "node-libs-browser": "^2.0.0",
     "strip-loader": "^0.1.2",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   }
 }
