--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "webpack-dev-server --open",
     "lint": "eslint"
   },
-  "keywords": ["webpack"],
+  "keywords": [
+    "webpack"
+  ],
   "author": "Ted",
   "license": "ISC",
   "devDependencies": {
@@ -25,7 +27,11 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "node-libs-browser": "^2.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
