--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Ted",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -32,6 +33,7 @@
     "less-loader": "^4.0.5",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.19.0",
